--- a/Enter.UI/Components/NavMenu/EntNavMenuTextItem.razor
+++ b/Enter.UI/Components/NavMenu/EntNavMenuTextItem.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Core.Constants
+@using Enter.UI.Core
 @inherits Enter.UI.Core.Bases.EntBaseComponent
 <div @attributes="AdditionalAttributes" class="@RootCss" @onclick="() => Click.InvokeAsync()">
     <EntIcon  class="@IconCss" Icon="@Icon" />
