--- a/Enter.UI/Styles/_variables.scss
+++ b/Enter.UI/Styles/_variables.scss
@@ -275,15 +275,17 @@ $color-rose-950: #4c0519;
 $colors: (
         "white": white,
         "black": black,
+        "primary": $color-blue-400,
+        "secondary": $color-neutral-500,
         "lighteen":$color-neutral-50,
         "light":$color-neutral-100,
-        "mute":$color-neutral-500,
+        "mute":$color-neutral-600,
         "dark":$color-neutral-900,
         "darker":$color-neutral-950,
-        'success': $color-green-500,
-        'danger': $color-red-500,
-        'warning': $color-orange-500,
-        'info': $color-blue-500,
+        'success': $color-green-400,
+        'danger': $color-red-400,
+        'warning': $color-orange-400,
+        'info': $color-sky-400,
         'late-50': $color-late-50,
         'late-100': $color-late-100,
         'late-200': $color-late-200,
@@ -1162,6 +1164,13 @@ $utilities: (
                         null: $border-width solid $border-color,
                         0: 0,
                 ),
+        ),
+        border-color: (
+                property: border-color,
+                propertyRtl: border-color,
+                cssName: border,
+                breakpoint: true,
+                values: $colors,
         ),
         border-top: (
                 property: border-top,
