--- a/Enter.Dashboard/Components/FormLayout.razor
+++ b/Enter.Dashboard/Components/FormLayout.razor
@@ -1,8 +1,7 @@
 ﻿@using System.ComponentModel.DataAnnotations
 @using Enter.Dashboard.Model;
-@using Enter.UI.Core.Constants
-<EntCard class="m-4">
-    <CardHeader>صفحه فرم</CardHeader>
+@using Enter.UI.Core
+<EntCard class="m-4" Title="صفحه فرم">
     <CardBody>
         <EditForm class="ent-edit-form" Model="Input" OnSubmit="@OnSubmit">
             <DataAnnotationsValidator />
@@ -33,15 +32,16 @@
 
                     <ValidationMessage For="() => Input!.Role" />
                 </div>
-                <div class="tablet:col-1/3 mb-4 ent-form-group">
-                    <label>سن</label>
+                <EntFormGroup
+                    class="tablet:col-1/3 mb-4 ent-form-group" 
+                    Label="سن" 
+                    For="()=> Input.Age">
                     <EntInputText @bind-Value="Input.Age" />
-                    <ValidationMessage For="() => Input!.Age" />
-                </div>
+                </EntFormGroup>
             </div>
             <div class="row">
                 <div class="tablet:col-1/3">
-                    <EntButton type="submit">ارسال</EntButton>
+                    <EntButton IsOutline="true" Color="ButtonColor.Primary" type="submit">ارسال</EntButton>
                 </div>
             </div>
         </EditForm>
