--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -2,7 +2,7 @@
 @using Enter.Dashboard.Model;
 @using Enter.UI.Services.Contracts;
 @using Enter.UI.Components
-@using Enter.UI.Core.Constants
+@using Enter.UI.Core
 
 <PageTitle>Index</PageTitle>
 
@@ -12,19 +12,17 @@
                PanelClass="bg-light"
                ActiveClass="bg-light"
                Closeable="true"
-               Border="0"
-               FlexFill="true"
+               class="border-0"
                Direction="EntTabDirection.Vertical" >
-        <EntDivision Padding="4">
-            <EntCard >
+        <div class="p-4">
+            <EntCard  class="mb-4">
                 <CardBody>
                     <EntFlex Direction="FlexDirection.Column">
                         <b>این صفحه پیشفرض EntMdiTab میباشد</b>
                     </EntFlex>
                 </CardBody>
             </EntCard>
-            <EntCard MarginTop="4">
-                <CardHeader>کامپوننت - دکمه</CardHeader>
+            <EntCard class="mb-4" Tag="card" Expandable="true" Icon="fa-light fa-user" Title="کامپوننت - دکمه">
                 <CardBody>
                     <EntFlex Direction="FlexDirection.Column"
                              LaptopDirection="FlexDirection.Row"
@@ -36,8 +34,7 @@
                     </EntFlex>
                 </CardBody>
             </EntCard>
-            <EntCard MarginTop="4">
-                <CardHeader>کامپوننت - مدال</CardHeader>
+            <EntCard class="mb-4" Title="کامپوننت - مدال">
                 <CardBody>
                     <EntFlex Direction="FlexDirection.Column"
                              LaptopDirection="FlexDirection.Row"
@@ -51,8 +48,7 @@
                     </EntFlex>
                 </CardBody>
             </EntCard>
-            <EntCard MarginTop="4">
-                <CardHeader>پاپ آور</CardHeader>
+            <EntCard class="mb-4" Title="پاپ آور">
                 <CardBody>
                     <EntButton Click="OpenPopover">باز کردن</EntButton>
                     <EntPopover Open="IsPopoverOpen" RelativeWidth="true">
@@ -65,10 +61,9 @@
                 </CardBody>
             </EntCard>
 
-            <EntCard MarginTop="4">
-                <CardHeader>درخت</CardHeader>
+            <EntCard class="mb-4" Title="درخت">
                 <CardBody>
-                    <EntTreeView MarginBottom="4"
+                    <EntTreeView 
                                  DataSource="Constants.Roles"
                                  TextFunc="x => x.Title"
                                  ValueFunc="x => x.Value"
@@ -81,8 +76,7 @@
                     }
                 </CardBody>
             </EntCard>
-            <EntCard MarginTop="4">
-                <CardHeader>فرم</CardHeader>
+            <EntCard class="mb-4" Title="فرم">
                 <CardBody>
 
                     <b class="mb-2">ورودی پرشونده خودکار</b>
@@ -100,7 +94,7 @@
                 </CardBody>
             </EntCard>
 
-        </EntDivision>
+        </div>
     </EntMdiTab>
 </EntFlex>
 
