--- a/Enter.UI/Components/Inputs/EntInputSelect.razor
+++ b/Enter.UI/Components/Inputs/EntInputSelect.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using System.Diagnostics.CodeAnalysis
-@using Enter.UI.Core.Constants;
+@using Enter.UI.Core;
 @using Enter.UI.Core.Enums
 @inherits EntBaseInput<string>
 @typeparam T
