--- a/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
+++ b/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
@@ -1,5 +1,5 @@
 ﻿@namespace Enter.UI.Components
-@using Enter.UI.Core.Constants
+@using Enter.UI.Core
 @inherits Enter.UI.Core.Bases.EntBaseComponent
 <div @attributes="AdditionalAttributes" class="@RootCss" >
     <div class="ent-nav-menu-group-item" @onclick="@ToggleItem">
