--- a/Enter.UI/Components/Expanable/EntExpandable.razor
+++ b/Enter.UI/Components/Expanable/EntExpandable.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @using Enter.UI.Interops;
-@using Enter.UI.JsService.Contracts;
+@using Enter.UI.JsService;
 @using Enter.UI.Services.Contracts;
 @inherits EntBaseComponent
 
