--- a/Enter.UI/Styles/components/_ent_button.component.scss
+++ b/Enter.UI/Styles/components/_ent_button.component.scss
@@ -2,19 +2,19 @@
     padding: 0.5rem 1rem;
     border: 0;
     background-color:transparent;
-    font-size: map-get($font-sizes, "medium");
+    font-size: 1rem;
     display: flex;
     align-items: center;
     gap: 0.5rem;
     cursor: pointer;
 
     &.ent-btn-sm {
-        padding: 0.35rem 0.85rem;
-        font-size: map-get($font-sizes, "medium-sm");
+        padding: .4rem 0.8rem;
+        font-size: map-get($font-sizes, "description");
     }
 
     &.ent-btn-lg {
-        padding: 0.65rem 1.15rem;
-        font-size: map-get($font-sizes, "medium-lg");
+        padding: 0.6rem 1.2rem;
+        font-size: map-get($font-sizes, "caption");
     }
 }
