--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -3,6 +3,7 @@
 @using Enter.UI.Services.Contracts;
 @using Enter.UI.Components
 @using Enter.UI.Core
+@using System.Linq.Expressions
 
 <PageTitle>Index</PageTitle>
 
@@ -15,14 +16,14 @@
                class="border-0"
                Direction="EntTabDirection.Vertical" >
         <div class="p-4">
-            <EntCard  class="mb-4">
+            <EntCard Title="پیشفزض"  Expandable="true" CardExpand="true" class="mb-4">
                 <CardBody>
                     <EntFlex Direction="FlexDirection.Column">
                         <b>این صفحه پیشفرض EntMdiTab میباشد</b>
                     </EntFlex>
                 </CardBody>
             </EntCard>
-            <EntCard class="mb-4" Tag="card" Expandable="true" Icon="fa-light fa-user" Title="کامپوننت - دکمه">
+            <EntCard class="mb-4" Tag="card" Expandable="true" CardExpand="false" Icon="fa-light fa-user" Title="کامپوننت - دکمه">
                 <CardBody>
                     <EntFlex Direction="FlexDirection.Column"
                              LaptopDirection="FlexDirection.Row"
@@ -34,7 +35,7 @@
                     </EntFlex>
                 </CardBody>
             </EntCard>
-            <EntCard class="mb-4" Title="کامپوننت - مدال">
+            <EntCard Expandable="true" CardExpand="false" class="mb-4" Title="کامپوننت - مدال">
                 <CardBody>
                     <EntFlex Direction="FlexDirection.Column"
                              LaptopDirection="FlexDirection.Row"
@@ -48,7 +49,7 @@
                     </EntFlex>
                 </CardBody>
             </EntCard>
-            <EntCard class="mb-4" Title="پاپ آور">
+            <EntCard Expandable="true" CardExpand="false" class="mb-4" Title="پاپ آور">
                 <CardBody>
                     <EntButton Click="OpenPopover">باز کردن</EntButton>
                     <EntPopover Open="IsPopoverOpen" RelativeWidth="true">
@@ -61,7 +62,7 @@
                 </CardBody>
             </EntCard>
 
-            <EntCard class="mb-4" Title="درخت">
+            <EntCard Expandable="true" CardExpand="false" class="mb-4" Title="درخت">
                 <CardBody>
                     <EntTreeView 
                                  DataSource="Constants.Roles"
@@ -76,7 +77,7 @@
                     }
                 </CardBody>
             </EntCard>
-            <EntCard class="mb-4" Title="فرم">
+            <EntCard Expandable="true" CardExpand="true" class="mb-4" Title="فرم">
                 <CardBody>
 
                     <b class="mb-2">ورودی پرشونده خودکار</b>
@@ -111,7 +112,11 @@
 
     public async Task OpenModal(EntModalSize size)
     {
-        var result = await ModalService.ShowAsync<Counter>("sada", new EntModalOptions()
+        var parameter = new ParameterBuilder<Counter>()
+            .AddParameter(x => x.ModalItem, new EntModalInstance())
+            .Build();
+        
+        var result = await ModalService.ShowAsync<Counter>("sada", parameter,new EntModalOptions()
             {
                 Size = size
             });
