--- a/Enter.UI/Components/Tabs/EntMdiTab.razor
+++ b/Enter.UI/Components/Tabs/EntMdiTab.razor
@@ -18,9 +18,11 @@
     <ChildContent>
         @foreach (var item in Items)
         {
-            <EntTabPanel Icon="@item.Icon" Title="@item.Title" Id="@item.Id" @key="item.Key">
-                <DynamicComponent Type="@item.ComponentType" Parameters="@item.ComponentParameters"/>
-            </EntTabPanel>
+            <CascadingValue Value="@item">
+                <EntTabPanel Icon="@item.Icon" Title="@item.Title" Id="@item.Id" @key="item.Key">
+                    <DynamicComponent Type="@item.ComponentType" Parameters="@item.ComponentParameters"/>
+                </EntTabPanel>
+            </CascadingValue>
         }
     </ChildContent>
     <DefaultPanel>
