--- a/Enter.UI/Components/Expanable/EntExpandable.razor
+++ b/Enter.UI/Components/Expanable/EntExpandable.razor
@@ -2,14 +2,28 @@
 @using Enter.UI.Interops;
 @using Enter.UI.JsService;
 @using Enter.UI.Services.Contracts;
+@using Microsoft.JSInterop;
 @inherits EntBaseComponent
 
-<div @ref="ElementReference" @attributes="@AdditionalAttributes" @ontransitionend="EventUtil.AsNonRenderingEventHandler(OnAnimationEnd)" class="@RootCss" style="@RootStyle" id="@Id">
+<div 
+    @ref="_reference" 
+    @attributes="@AdditionalAttributes" 
+    @onanimationend="EventUtil.AsNonRenderingEventHandler(OnAnimationEnd)" 
+    class="@RootCss" 
+    style="@RootStyle" 
+    id="@Id">
     @ChildContent
 </div>
 
 @code {
 
+    // Private Properties
+    private EntExpandableAnimationState? _animationState = null;
+    private bool? _tempExpanded;
+    private bool _expanded;
+    internal double _height = 0;
+    private bool _updateHeight ;
+    private ElementReference _reference { get; set; }
     // Inject Services
     [Inject]
     internal IEntSharedJsService SharedJsService { get; set; }
@@ -17,85 +31,117 @@
     // Style and Css
     private string RootCss => CssClassBuilder
         .AddClass("ent-expandable")
-        .AddClass("ent-expandable-close", animationState == EntExpandableAnimationState.Close)
-        .AddClass("ent-expandable-open", animationState == EntExpandableAnimationState.Open)
-        .AddClass("ent-expandable-closing", animationState == EntExpandableAnimationState.Closing)
-        .AddClass("ent-expandable-opening", animationState == EntExpandableAnimationState.Opening)
+        .AddClass("ent-expandable-closed", _animationState == EntExpandableAnimationState.Closed)
+        .AddClass("ent-expandable-opened", _animationState == EntExpandableAnimationState.Opened)
+        .AddClass("ent-expandable-closing", _animationState == EntExpandableAnimationState.Closing)
+        .AddClass("ent-expandable-opening", _animationState == EntExpandableAnimationState.Opening)
         .Build();
 
     private string RootStyle => StyleBuilder
-        .AddStyle("transition: all 0.25s ease-in-out")
-        .AddStyle($"height : auto",animationState == EntExpandableAnimationState.Open)
-        .AddStyle($"height : 0px", animationState == EntExpandableAnimationState.Close)
-        .AddStyle($"height : {_height}px",animationState is EntExpandableAnimationState.Closing or EntExpandableAnimationState.Opening)
+        .AddStyle("transition: all 0.25s ease-in-out",_animationState is EntExpandableAnimationState.Closing or EntExpandableAnimationState.Opening)
+        .AddStyle($"height : auto",_animationState == EntExpandableAnimationState.Opened)
+        .AddStyle($"height : 0px", _animationState == EntExpandableAnimationState.Closed)
+        .AddStyle($"height : {_height}px",_animationState is EntExpandableAnimationState.Closing or EntExpandableAnimationState.Opening)
         .Build();
 
-    // Private Properties
-    private EntExpandableAnimationState animationState = default;
-    public bool? _tempShow = null;
-    private double _height = 0;
-    // Elements
-    public ElementReference ElementReference { get; set; }
+  
+    
 
     // Parameters
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
 
     [Parameter]
-    public bool Show { get; set; } = true;
+    public bool Expanded
+    {
+        get => _expanded;
+        set
+        {
+            if (_expanded == value)
+                return;
+            _expanded = value;
+
+            if (FirstRendered)
+            {
+                _animationState = _expanded ? EntExpandableAnimationState.Opening : EntExpandableAnimationState.Closing;
+                _ = UpdateHeight();
+                _updateHeight = true;
+            }
+            else if (_expanded)
+            {
+                _animationState = EntExpandableAnimationState.Opened;
+            }
+
+            //_ = ExpandedChanged.InvokeAsync(_expanded);
+        }
+    }
 
 
     protected override async Task OnInitializedAsync()
     {
-      
-        animationState = Show switch
+        _animationState = Expanded switch
         {
-            true => EntExpandableAnimationState.Open,
-            false => EntExpandableAnimationState.Close
+            true => EntExpandableAnimationState.Opened,
+            false => EntExpandableAnimationState.Closed
         };
-
     }
 
 
     public async Task OnAnimationEnd()
     {
-        if (animationState == EntExpandableAnimationState.Closing)
+        await Task.Delay(200);
+        if (_animationState == EntExpandableAnimationState.Closing)
         {
-            animationState = EntExpandableAnimationState.Close;
+           
+            _animationState = EntExpandableAnimationState.Closed;
         }
-        if (animationState == EntExpandableAnimationState.Opening)
+        if (_animationState == EntExpandableAnimationState.Opening)
         {
-            animationState = EntExpandableAnimationState.Open;
+            _animationState = EntExpandableAnimationState.Opened;
         }
         StateHasChanged();
     }
 
     protected override async Task OnParametersSetAsync()
     {
-        if (_tempShow != Show && FirstRendered)
+        if (_tempExpanded != Expended && FirstRendered)
         {
-            animationState = Show switch {
+            _animationState = Expanded switch
+            {
                 true => EntExpandableAnimationState.Opening,
                 false => EntExpandableAnimationState.Closing,
             };
             // await _expandableIntrop.ToogleAsync(Id, Show.Value);
-            _tempShow = Show;
+            _tempExpanded = Expanded;
         }
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        _height = (await SharedJsService.GetBoundingClientRect(ElementReference)).ScrollHeight;
+        _height = (await SharedJsService.GetBoundingClientRect(_reference)).ScrollHeight;
         await base.OnAfterRenderAsync(firstRender);
     }
 
 
     enum EntExpandableAnimationState
     {
-        Close,
-        Open,
+        Closed,
+        Opened,
         Opening,
         Closing
+    }
+
+    internal async Task UpdateHeight()
+    {
+        try
+        {
+            _height = (await SharedJsService.GetBoundingClientRect(_reference))?.ScrollHeight ?? 0;
+        }
+        catch (Exception ex) when (ex is JSDisconnectedException or TaskCanceledException)
+        {
+            _height = 0;
+        }
+        
     }
 
 
